--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
   <!-- Meta -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Currency converter" />
+  <meta name="theme-color" content="#212529" />
+  <meta name="description" content="Calculate live currency and foreign exchange rates with the free converter." />
 
   <!-- Icons -->
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
